--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,25 +35,23 @@ jobs:
       run: php artisan test --coverage --min=90 
 
   laravel-deploy:
+    needs: laravel-tests
     runs-on: ubuntu-latest
     steps:
-      - name: Que caraio
-        run: echo '${{ secrets.LEOPERSAN_HOST }}'
-      - name: Que caraio2
-        run: echo ${{ secrets.LEOPERSAN_HOST }}
       - name: Set private key
         uses: MrSquaare/ssh-setup-action@v1.0.1
         with:
           host: ${{ secrets.LEOPERSAN_HOST }}
           private-key: ${{ secrets.LEOPERSAN_PRIVATE_KEY }}
       - name: Deploy
-        run: ssh root@leopersan.com.br 'bash -se' << EOF_SSH
-              cd /var/www/cursos
-              git pull origin main
-              composer install -q
-              chown -R www-data:www-data .
-              php artisan migrate
-              php artisan optimize
-              EOF_SSH
+        run: |
+          ssh root@leopersan.com.br 'bash -se' << EOF_SSH
+          cd /var/www/cursos
+          git pull origin main
+          composer install -q
+          chown -R www-data:www-data .
+          php artisan migrate
+          php artisan optimize
+          EOF_SSH
 
   
